--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -908,7 +908,7 @@
     "logs": "Protokolle",
     "long": "Lange",
     "longitude": "Längengrad",
-    "longitude-abb": "Long",
+    "longitude-abb": "Längengrad",
     "look-for-gaps": "Nach Lücken suchen",
     "lot": "Menge",
     "low-security": "Niedrige Sicherheit",
@@ -931,7 +931,7 @@
     "margin-top": "Rand oben",
     "mark-as-homepage": "Als Startseite markieren",
     "marked-as-homepage": "Als Homepage markiert",
-    "max-input-vars-warning": "max-input-vars-warning",
+    "max-input-vars-warning": "Mit der aktuellen PHP-Konfiguration (max_input_vars) können Sie nicht mit Dokumenten arbeiten, die mehr als %numlines% Zeilen enthalten.",
     "max-risk": "Höchstes Risiko",
     "maximum-amount-with-cifnif": "Maximalbetrag mit CIF\/NIF",
     "maximum-amount-without-cifnif": "M",
@@ -1054,7 +1054,7 @@
     "numsupplier": "Num. Lieferant",
     "observations": "Beobachtungen",
     "october": "Oktober",
-    "offsetting-account": "Offsetting account",
+    "offsetting-account": "Gegenkonto",
     "only-active": "Nur aktive",
     "only-charged": "nur berechnet",
     "only-closed": "Nur geschlossen",
@@ -1152,7 +1152,7 @@
     "plugin-file-too-big": "Este servidor no permite subir archivos de más de %size% MB. Por favor, aumenta el tamaño máximo de subida de archivos en PHP o copia el archivo a la carpeta Plugins.",
     "plugin-installation-disabled": "Die Plugin-Installation ist auf diesem Server deaktiviert",
     "plugin-installed": "Plugin installiert",
-    "plugin-need-update": "El plugin %plugin% necesitará actualización para funcionar con la nueva versión de FacturaScripts.",
+    "plugin-need-update": "Das Plugin %plugin% muss aktualisiert werden, um mit der neuen Version von FacturaScripts zu funktionieren.",
     "plugin-need-update-but": "Das Plugin %plugin% benötigt noch ein kompatibles Update.",
     "plugin-needed": "Plugin %pluginName% nötig.",
     "plugin-needs-fs-version": "Plugin %pluginName% benötigt FacturaScripts %minVersion%, aber sie haben FacturaScripts %version% installiert",
@@ -1178,7 +1178,7 @@
     "previous": "vorherige",
     "previous-balance": "Vorheriger Saldo",
     "previous-documents": "vorherige Dokumente",
-    "previous-quarter": "Trimestre anterior",
+    "previous-quarter": "Vorheriges Quartal",
     "previously-purchased-from-supplier": "Comprado anteriormente al proveedor",
     "previously-sold-to-customer": "Vendido anteriormente al cliente",
     "price": "Preis",
@@ -1227,12 +1227,12 @@
     "quantity-remaining": "Verbleibende Menge",
     "quantity-served": "quantity-served",
     "quantity-sold": "quantity-sold",
-    "randomizer-generating-more-items": "randomizer-generating-more-items",
+    "randomizer-generating-more-items": "Generiere weitere Elemente...",
     "rate": "Rate",
     "rates": "Preise",
     "re": "RE",
     "re-open": "Wieder öffnen",
-    "react": "Reaccionar",
+    "react": "Reagieren",
     "read-message-by": "Leído por %nick% el %date%",
     "read-more": "Leer más",
     "readonly": "readonly",
@@ -1297,11 +1297,11 @@
     "reports": "Berichte",
     "request-sent": "Antrag geschickt",
     "required": "erforderlich",
-    "requires-core": "Requiere FacturaScripts %version%",
+    "requires-core": "Benötigt FacturaScripts %version%",
     "reserved": "Reserviert",
     "reset": "Einstellungen erfolgreich zurückgesetzt, drücken Sie <a href=\" %1$s#avanzado\">hier<\/a> um fortzusetzen.",
     "resource": "Ressource",
-    "respond": "Responder",
+    "respond": "Antworten",
     "restore": "Wiederherstellen",
     "restore-data": "Daten wiederherstellen",
     "result": "Ergebnis",
@@ -1314,7 +1314,7 @@
     "role": "Rolle",
     "roles": "Rollen",
     "rules": "Rules",
-    "run": "run",
+    "run": "Ausführen",
     "running-plugin-cron": "Running FacturaScripts cron for plugin %pluginName%",
     "sales": "Der Umsatz",
     "sales-invoice": "Verkaufsrechnung",
@@ -1325,7 +1325,7 @@
     "save": "speichern",
     "save-data": "Daten speichern",
     "save-filter": "Filter speichern",
-    "sdk": "sdk",
+    "sdk": "SDK",
     "search": "Suche",
     "search-document": "Geben Sie die Nummer von %doctype% ein, um zu suchen.",
     "search-product": "Produkt suchen",
@@ -1356,7 +1356,7 @@
     "sent-a-picture": "Ein Bild gesendet",
     "sent-a-video": "Ein Video gesendet",
     "sent-message-by": "Nachricht gesendet von %nick% am %date%",
-    "sepa-suffix": "sepa-suffix",
+    "sepa-suffix": "SEPA-Suffix",
     "september": "September",
     "sequences": "Reihenfolgen",
     "serial-number": "Seriennummer",
@@ -1373,7 +1373,7 @@
     "settlement-product": "settlement-product",
     "settlements": "Abrechnungen",
     "setup-options": "Einrichtungsoptionen",
-    "shipping": "Shipping",
+    "shipping": "Versand",
     "shipping-address": "Lieferanschrift",
     "shop": "Tienda",
     "shops": "Geschäfte",
@@ -1382,7 +1382,7 @@
     "show": "Zeigen",
     "show-balance-graphic": "show-balance-graphic",
     "show-crm-warnings": "Mostrar avisos CRM",
-    "show-expired-receipts": "Mostrar recibos vencidos",
+    "show-expired-receipts": "Abgelaufene Belege anzeigen",
     "show-month-stats": "Monatsstatistiken anzeigen",
     "show-pending-remittances": "Zeige ausstehende Überweisungen",
     "show-price": "Show price on print",
@@ -1427,7 +1427,7 @@
     "status-value-is-number": "El campo estado debe ser numérico.",
     "stock": "Stock",
     "stock-transfer": "stock transfer",
-    "stock-transfers": "stock transfers",
+    "stock-transfers": "Bestandübertragungen",
     "stockmax": "Lager max.",
     "stockmin": "Lager min.",
     "storage-limit-almost": "Speicherlimit fast erreicht (%limit%). Es sind noch %free% übrig",
@@ -1437,7 +1437,7 @@
     "sub-account": "Unterkonto",
     "sub-type": "sub-type",
     "subaccount": "Unterkonten",
-    "subaccount-bad-codcuenta": "La subcuenta %codsubcuenta% tiene asignada una cuenta incorrecta.",
+    "subaccount-bad-codcuenta": "Das Unterkonto %codsubcuenta% hat ein falsches Konto zugewiesen.",
     "subaccount-belongs-other-year": "Unterkonto 0 gehört zu einem anderen Geschäftsjahr.",
     "subaccount-irpf": "Konto für Abzüge",
     "subaccount-irpf-creditor": "Unterkonto für Einkaufsabzüge",
@@ -1512,7 +1512,7 @@
     "templates": "Vorlagen",
     "test": "Test",
     "test-mail-not-implemented": "Der Test des Mail-Controller ist nicht implementiert",
-    "test-sendmail-not-implemented": "El test del controlador de correo sendmail no está implementado",
+    "test-sendmail-not-implemented": "Der Test des Sendmail-Controllers ist nicht implementiert",
     "text-color": "Textfarbe",
     "texts": "Texte",
     "third-quarter": "Drittes Quartal",
@@ -1527,7 +1527,7 @@
     "thousands-separator": "Tausende",
     "thursday": "Donnerstag",
     "ticket": "Ticket",
-    "tickets": "T",
+    "tickets": "Tickets",
     "time": "Zeit",
     "timezone": "Zeitzone",
     "title": "Titel",
@@ -1535,7 +1535,7 @@
     "title-url": "Title URL",
     "to": "Bis",
     "to-refund": "A devolver",
-    "to-report": "Informar",
+    "to-report": "Berichten",
     "today": "Heute",
     "total": "Gesamt",
     "total-amount": "total-amount",
@@ -1565,7 +1565,7 @@
     "type-emergency": "Type emergency",
     "type-error": "Type error",
     "type-info": "Informationstyp",
-    "type-notice": "Type notice",
+    "type-notice": "Hinweistyp",
     "type-success": "type-success",
     "type-warning": "Warnungstyp",
     "unbalance": "Unausgeglichen",
@@ -1589,7 +1589,7 @@
     "update-stock": "Lagerbestand aktualisieren",
     "update-supplier-prices": "aktullieren Lieferantenpreise",
     "update-time": "Aktuallierungszeit",
-    "updated-model": "Actualizado %model% (%key%) %desc%",
+    "updated-model": "Aktualisiert %model% (%key%) %desc%",
     "updater": "Updater",
     "updates-available": "Actualizaciones disponibles",
     "updates-available-p": "Hay actualizaciones disponibles de FacturaScripts. Por favor, haz clic en el actualizador y descarga la nueva versión. Las actualizaciones corrigen fallos y añaden nuevas funciones.",
