--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -388,7 +388,7 @@
     "dateentry-wildcard-info": "Kontabilitate idazpenaren goiburuan adierazitako data",
     "day": "Eguna",
     "days": "Egunak",
-    "days-log-retention": "Egunen log bistaratze mantenua",
+    "days-log-retention": "Egunen logen mantentze epea",
     "days-until-expiration": "Egunak epemuga arte",
     "db-host": "Datu basearen zerbitzaria",
     "db-name": "Datu-basearen izena",
@@ -713,7 +713,7 @@
     "grouping-type": "Taldea",
     "groups": "Taldeak",
     "has-attachments": "Eranskinak ditu",
-    "has-parent": "Arbasoa dauka",
+    "has-parent": "Arbasoa du",
     "hash": "Hash",
     "header": "Goiburua",
     "heading-account-group-id": "Epigrafe taldearen ID",
@@ -1262,7 +1262,7 @@
     "refund-payment-concept": "Devoluzioa egingo da %document% dokumentua itzulita",
     "refunds": "Itzulketak",
     "register": "Erregistratu",
-    "register-install-ad": "Registra la instalación de FacturaScripts",
+    "register-install-ad": "Registratu FacturaScripts instalazioa",
     "register-install-ad-p": "Si registras la instalación de FacturaScripts obtendrás 1 mes de patrocinio PRO, que te permite descargar uno de nuestros plugins exclusivos. Además nos ayuda obtener estadísticas de versiones del core y de PHP.",
     "register-installation": "Instalazioa erregistratu",
     "register-installation-p": "Zure instalazioa erregistratu ordainpeko edo pribatuak diren pluginak eguneratu ahal izateko.",
@@ -1680,6 +1680,6 @@
     "you-should-change-passwd": "Zure pasahitza aldatu beharko zenuen",
     "your": "Zure",
     "zip-code": "Posta Kodea",
-    "zip-codes": "Posta-kodeak",
+    "zip-codes": "Posta kodeak",
     "zip-error-wrong-structure": "Zip-aren egitura okerra da. Pluginaren karpeta eta plugin bakarra izan behar ditu."
 }
