--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -1263,7 +1263,7 @@
     "refunds": "Devolucións",
     "register": "Rexistrar",
     "register-install-ad": "Registra a instalación de FacturaScripts",
-    "register-install-ad-p": "Se registas a instalación de FacturaScripts obterás 1 mes de patrocinio PRO, que che permite descargar un dos nosos plugins exclusivos. Ademais, axúdanos a obter estatísticas de versións do core e de PHP.",
+    "register-install-ad-p": "Se rexistras a instalación de FacturaScripts obterás 1 mes de patrocinio PRO, que che permite descargar un dos nosos plugins exclusivos. Ademais, axúdanos a obter estatísticas de versións do core e de PHP.",
     "register-installation": "Rexistrar instalación",
     "register-installation-p": "Rexistre a súa instalación para poder actualizar plugins de pago ou privados",
     "register-symbol": "#",
