--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -272,7 +272,7 @@
     "commercial-terms": "Termini commerciali",
     "commission": "commission",
     "commission-general-info": "Elenco delle percentuali di commissione applicabili alla vendita di prodotti. Verrà applicata la percentuale con le condizioni più restrittive o specifiche comunicate.",
-    "commission-settlement": "commission-settlement",
+    "commission-settlement": "Liquidazione delle commissioni %code%",
     "commissions": "commissioni",
     "common-data": "Dati comuni",
     "common-error": "errore",
@@ -311,7 +311,7 @@
     "conversion-rate": "Tasso di cambio a €",
     "conversion-rate-not-0": "Il tasso di conversione non può essere 0.",
     "convert-into-customer": "Convertire in cliente",
-    "convert-into-supplier": "convert-to-supplier",
+    "convert-into-supplier": "Converti in fornitore",
     "cookies": "Cookies",
     "copy": "copia",
     "copy-p": "copia p",
@@ -341,14 +341,14 @@
     "cron-timeout": "Il cron è stato interrotto per non superare il tempo massimo di esecuzione di PHP. Si prega di eseguire il cron da terminale per evitare questo limite",
     "crons": "Cron",
     "currency": "Moneta",
-    "currency-position": "Currency position",
+    "currency-position": "Posizione del simbolo di valuta",
     "current-quarter": "Trimestre attuale",
     "current-risk": "rischio attuale",
     "customer": "Cliente",
     "customer-account-not-found": "Account cliente non trovato",
     "customer-banking-accounts": "Conti bancari",
     "customer-code": "codice cliente",
-    "customer-commission-info": "customer-commission-info",
+    "customer-commission-info": "Si applicherà solo quando la vendita è al cliente selezionato",
     "customer-delivery-note": "Customer delivery note",
     "customer-delivery-notes": "Note di consegna del cliente",
     "customer-estimation": "Estimazione cliente",
@@ -366,7 +366,7 @@
     "customer-subaccount-p": "sottocliente-p",
     "customers": "Clienti",
     "customize": "personalizzare",
-    "daily": "Daily",
+    "daily": "Giornale",
     "dasboard-backup-li1": "Se si cancella o disinstalla FacturaScripts, si perdono i dati.",
     "dasboard-backup-li2": "Se si cancella o disinstalla XAMPP, si perdono i dati.",
     "dasboard-backup-li3": "Se si perde, formatta o distrugge il PC, si perdono i dati.",
@@ -663,7 +663,7 @@
     "general": "Generale",
     "general-concepts": "Concetti generali",
     "general-data": "informazioni generali",
-    "generate": "Generate",
+    "generate": "Generare",
     "generate-accounting-entries": "generare voci contabili",
     "generate-accounting-entry": "Genera voce contabile",
     "generate-doc-type": "Genera tipo di documento",
@@ -733,7 +733,7 @@
     "homepage": "Pagina iniziale",
     "host": "host:",
     "hour": "Ora",
-    "hours": "hours",
+    "hours": "Ore",
     "http": "HTTP",
     "https": "HTTPS",
     "i-forgot-password": "Password dimenticata",
@@ -762,7 +762,7 @@
     "infostate-component-title": "Status Information",
     "initial-number": "numero iniziale",
     "insert-update": "Inserisci o aggiorna",
-    "installed": "installed",
+    "installed": "Installato",
     "installed-plugins": "Plugin installati",
     "installer": "Installer",
     "installer-p": "Benvenuti al programma di installazione FacturaScripts. Compilare i campi necessari per la connessione al database.",
@@ -776,7 +776,7 @@
     "invalid-column-lenght": "%column% deve contenere tra %min% e %max% caratteri.",
     "invalid-date": "Data% 1 $ s non è valida.",
     "invalid-date-there-are-invoices-after": "Data non valida: %date%. La fattura %other% è successiva eppure ha data precedente: %other-date%. Ogni fattura deve avere data precedente o uguale a quella successiva.",
-    "invalid-date-there-are-invoices-before": "invalid-date-there-are-invoices-before",
+    "invalid-date-there-are-invoices-before": "Data non valida: %date%. La fattura %other% è antecedente eppure ha una data successiva: %other-date%. Ogni fattura deve avere una data anteriore o uguale alla seguente.",
     "invalid-iban": "IBAN invalido %iban%",
     "invalid-iso-code": "Codice ISO '%iso-code%' non valido",
     "invalid-number": "invalid-number",
@@ -832,7 +832,7 @@
     "languages-es_AR": "Español (Argentina)",
     "languages-es_CL": "languages-es_CL",
     "languages-es_CO": "Spagnolo (Colombia)",
-    "languages-es_CR": "languages-es_CR",
+    "languages-es_CR": "Spagnolo (Costa Rica)",
     "languages-es_DO": "Spagnolo (Rep. Dominicana)",
     "languages-es_EC": "lingue-es_EC",
     "languages-es_ES": "Spanish (Spain)",
@@ -913,7 +913,7 @@
     "lot": "lotto",
     "low-security": "Low security",
     "machine": "macchina",
-    "machines": "machines",
+    "machines": "Macchine",
     "macro-account-note-info": "Chiavi per sostituire i valori macro",
     "mail-server-error": "Errore nella connessione al server di posta",
     "mail-test-error": "Test dell'e-mail fallito",
@@ -964,7 +964,7 @@
     "missing-file-help": "This file seems to be missing from your installation. Maybe you don't use it, but <em>you can't remove it<\/em>.",
     "mobile": "Mobile",
     "model": "Modello",
-    "model-not-found": "model-not-found",
+    "model-not-found": "Modello non trovato: %model%",
     "monday": "lunedì",
     "month": "Mese",
     "month-1": "Gennaio",
@@ -1035,7 +1035,7 @@
     "not-public": "Non pubblico",
     "not-stored-content": "Contenuto non memorizzato",
     "not-valid-email": "Email non valida %email%",
-    "not-valid-fiscal-number": "not-valid-fiscal-number",
+    "not-valid-fiscal-number": "Il %type% %number% non è valido",
     "not-valid-image": "Immagine non valida",
     "not-valid-percentage-retention": "Percentuale di ritenzione non valida. Deve essere superiore a 0.00",
     "note": "note",
@@ -1055,8 +1055,8 @@
     "observations": "osservazioni",
     "october": "Ottobre",
     "offsetting-account": "Offsetting account",
-    "only-active": "only-active",
-    "only-charged": "only-charged",
+    "only-active": "Solo attivi",
+    "only-charged": "Solo addebitati",
     "only-closed": "Solo chiusi",
     "only-insert": "solo inserire",
     "only-owner-data": "only-owner-data",
@@ -1076,7 +1076,7 @@
     "options-button-header": "Maquetación y permessi",
     "order": "ordine",
     "order-email-subject": "Oggetto email dell'ordine",
-    "order-email-text": "order-email-text",
+    "order-email-text": "Buongiorno, in allegato il suo ordine %code%",
     "orders": "ordini",
     "origin": "origine",
     "origin-warehouse": "magazzino di origine",
@@ -1154,7 +1154,7 @@
     "plugin-installed": "Plugin installato",
     "plugin-need-update": "Il plugin %plugin% richiederà un aggiornamento per funzionare con la nuova versione di FacturaScripts.",
     "plugin-need-update-but": "El plugin %plugin% todavía no tiene actualización compatible.",
-    "plugin-needed": "Plugin %pluginName% needed.",
+    "plugin-needed": "Plugin %pluginName% necessario.",
     "plugin-needs-fs-version": "Il plugin %pluginName% richiede FacturaScripts %minVersion% ma è installata la versione %version% di FacturaScripts",
     "plugin-not-compatible": "Il Plugin %pluginName% non è compatibile con FacturaScripts %versione%",
     "plugin-order": "Ordine: %num%",
@@ -1172,11 +1172,11 @@
     "post-office-box": "lettera",
     "postgresql": "PostgreSQL",
     "precio": "Prezzo",
-    "predefined-concepts": "Predefined Concepts",
+    "predefined-concepts": "Concetti Predefiniti",
     "preferences": "Preferencias",
     "preview": "Anteprima",
     "previous": "precedente",
-    "previous-balance": "Previous Balance",
+    "previous-balance": "Saldo precedente",
     "previous-documents": "Documenti precedenti",
     "previous-quarter": "Trimestre precedente",
     "previously-purchased-from-supplier": "Acquistato in precedenza dal fornitore",
@@ -1218,7 +1218,7 @@
     "purchases": "acquisti",
     "purchases-subaccount-not-found": "Conto acquisti non trovato",
     "pvp": "Prezzo al dettaglio",
-    "pvp-total": "Total retail price",
+    "pvp-total": "Prezzo totale",
     "pvp-unit": "Unit retail price",
     "pvpsindto-line-error": "Errore nel valore di pvpsindto della riga 0 del documento. Valore corretto: 1",
     "pvptotal-line-error": "Errore nel valore pvptotal della riga 0 del documento. Valore corretto: 1",
@@ -1262,7 +1262,7 @@
     "refund-payment-concept": "Rimborso del documento %document%",
     "refunds": "refunds",
     "register": "registrare",
-    "register-install-ad": "Registra la instalación de FacturaScripts",
+    "register-install-ad": "Registra l'installazione di FacturaScripts",
     "register-install-ad-p": "Si registras la instalación de FacturaScripts obtendrás 1 mes de patrocinio PRO, que te permite descargar uno de nuestros plugins exclusivos. Además nos ayuda obtener estadísticas de versiones del core y de PHP.",
     "register-installation": "Registra installazione",
     "register-installation-p": "Registra la tua installazione per poter aggiornare i plugin di pagamento o privati.",
@@ -1332,7 +1332,7 @@
     "second-hand": "Di seconda mano",
     "second-quarter": "Secondo trimestre",
     "second-trimester": "Second trimester",
-    "select": "select",
+    "select": "Seleziona",
     "select-all": "Seleziona tutto",
     "select-none": "Seleziona nessuno",
     "select-plugin-zip-file": "Seleziona il file zip del plugin:",
@@ -1350,7 +1350,7 @@
     "send-mail-error": "Errore nell'invio dell'email",
     "send-mail-ok": "Email inviato correttamente",
     "send-videos": "Enviar vídeos",
-    "sent-a-audio": "Envió un audio",
+    "sent-a-audio": "Ha inviato un audio",
     "sent-a-document": "Ha inviato un documento",
     "sent-a-location": "Ha inviato una posizione",
     "sent-a-picture": "Ha inviato un'immagine",
@@ -1359,7 +1359,7 @@
     "sepa-suffix": "suffisso SEPA",
     "september": "Settembre",
     "sequences": "Sequenze",
-    "serial-number": "Serial Number",
+    "serial-number": "Numero di serie",
     "serie": "serie",
     "serieb": "Serie B",
     "serier": "serier",
@@ -1451,14 +1451,14 @@
     "subtotal": "Subtotale",
     "subtract": "Sottrarre",
     "success": "successo",
-    "sum": "Suma",
+    "sum": "Somma",
     "sum-netos-line-tax-must-be": "La somma della rete delle linee IVA dovrebbe essere: 0",
     "sum-total-line-tax-must-be": "La somma dei totali IVA delle righe IVA dovrebbe essere: 0",
     "summary": "Sommario",
     "sums-and-balances": "Sommare e bilanciare",
     "sunday": "sunday",
     "supplied": "fornito",
-    "supplied-amount": "supplied-amount",
+    "supplied-amount": "Fornimenti",
     "supplied-subaccount-not-found": "Subcuenta non trovata",
     "supplier": "Fornitore",
     "supplier-account-not-found": "conto fornitore non trovato",
@@ -1594,7 +1594,7 @@
     "updates-available": "Aggiornamenti disponibili",
     "updates-available-p": "Hay actualizaciones disponibles de FacturaScripts. Por favor, haz clic en el actualizador y descarga la nueva versión. Las actualizaciones corrigen fallos y añaden nuevas funciones.",
     "updating-attached-relations": "Actualizando contadores de archivos adjuntos",
-    "upload-file": "Subir archivo",
+    "upload-file": "Carica file",
     "uploaded-at": "Caricato alle",
     "url": "Sito web",
     "use-gaps": "usa spazi vuoti",
@@ -1623,8 +1623,8 @@
     "vat-number-not-vies": "Il numero '%vat-number%' non è registrato nel sistema VIES",
     "vat-regime": "Regime IVA",
     "VAT-register": "Partita IVA",
-    "vat-regularization": "VAT Regularization",
-    "vehicle": "Vehículo",
+    "vat-regularization": "Regolarizzazione IVA",
+    "vehicle": "Veicolo",
     "verified": "Verificato",
     "version": "versione",
     "video": "Video",
@@ -1638,10 +1638,10 @@
     "warehouse-must-be-same-business": "I magazzini di origine e di destinazione devono appartenere alla stessa azienda",
     "warehouses": "magazzini",
     "warning": "Attenzione",
-    "warnings": "Avisos",
+    "warnings": "Avvisi",
     "web": "web:",
     "website": "Sito web",
-    "wednesday": "wednesday",
+    "wednesday": "Mercoledì",
     "weeks": "Settimane",
     "weight": "Peso",
     "which-logs-store": "Quali log archiviare",
@@ -1655,9 +1655,9 @@
     "without-regularization": "Senza regolarizzazione",
     "without-tax": "Senza tasse",
     "without-taxation": "Senza tasse",
-    "wizard": "wizard",
+    "wizard": "Assistente",
     "wizard-p": "Compila questo modulo sul tuo business per completare la configurazione.",
-    "wizard-plugins": "wizard-plugins",
+    "wizard-plugins": "Un plugin è un componente che aggiunge nuove funzionalità. Seleziona i plugin che desideri attivare immediatamente, o fallo più tardi dal pannello di controllo.",
     "work-events": "Eventi di lavoro",
     "working-hours": "Ore lavorative",
     "works": "Lavori",
