--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -55,7 +55,7 @@
     "add-extra-lines": "Añadir líneas extra",
     "add-file": "Dodaj plik",
     "add-invoices": "Añadir facturas",
-    "add-new-plugin": "Añadir nuevo plugin",
+    "add-new-plugin": "Dodaj nową wtyczkę",
     "additional-text": "Texto adicional",
     "address": "Dirección",
     "addresses": "Direcciones",
@@ -78,11 +78,11 @@
     "all": "Todos",
     "all-variants": "Todas las variantes",
     "allow-delete": "Permitir eliminar",
-    "allow-delete-data": "Permitir BORRADO",
+    "allow-delete-data": "Zezwalaj na USUNIĘCIE",
     "allow-export": "Permitir exportar",
     "allow-get-data": "Zezwól na DOSTĘP",
     "allow-import": "Permitir importar",
-    "allow-marketing": "Permite marketing",
+    "allow-marketing": "Zezwalaj na marketing",
     "allow-post-data": "Zezwól na MODYFIKACJĘ",
     "allow-put-data": "Zezwól na DODAWANIE",
     "allow-sale-without-stock": "Permitir venta sin stock",
@@ -114,7 +114,7 @@
     "april": "Abril",
     "are-you-sure": "Esto no se puede deshacer. ¿Está seguro que desea continuar?",
     "are-you-sure-action": "Ta akcja wymaga potwierdzenia. Czy na pewno chcesz kontynuować?",
-    "asset": "Activo",
+    "asset": "Aktywa",
     "assigned": "Asignado",
     "attached-file": "Archivo adjunto",
     "attached-files": "Archivos adjuntos",
@@ -134,8 +134,8 @@
     "automatic": "Automático",
     "available": "Disponible",
     "average": "Średnia",
-    "average-cost": "Precio medio",
-    "average-purchase-price": "Precio medio de compra",
+    "average-cost": "Średnia cena",
+    "average-purchase-price": "Średnia cena zakupu",
     "back": "Volver",
     "background-color": "Kolor tła",
     "background-overlay": "Kolor nakładki na tle",
@@ -180,7 +180,7 @@
     "calendar": "Calendario",
     "can-not-open-zip-file": "No puedo abrir archivo zip '%zipFile%'",
     "cancel": "Cancelar",
-    "cancel-data": "Cancelar cambios u operación",
+    "cancel-data": "Anuluj zmiany lub operację",
     "cancelled": "Cancelado",
     "cannot-generate-accounting-entry": "Błąd podczas generowania księgowania faktury %invoice%",
     "cant-assign-date-already-regularized": "No se puede asignar la fecha %date% porque ya hay una regularización de %tax% para ese periodo.",
@@ -214,7 +214,7 @@
     "carriers": "Przewoźnicy",
     "cash": "Efectivo",
     "categories": "Categorias",
-    "category": "Categoría",
+    "category": "Kategoria",
     "cc": "CC",
     "center": "Centro",
     "change": "Cambiar",
@@ -256,7 +256,7 @@
     "code": "Código",
     "codiso": "Código ISO",
     "color": "Color",
-    "color-danger": "Color peligro",
+    "color-danger": "Kolor niebezpieczeństwa",
     "color-dark": "Color oscuridad",
     "color-info": "Color info",
     "color-light": "Color luz",
@@ -292,7 +292,7 @@
     "configure-columns": "Configurador de columnas",
     "confirm": "Confirmar",
     "confirm-delete": "Czy na pewno chcesz to usunąć?",
-    "connect": "Conectar",
+    "connect": "Połączyć",
     "contact": "Kontakt",
     "contact-data": "Dane kontaktowe",
     "contact-info": "Informacje kontaktowe",
@@ -327,7 +327,7 @@
     "country": "País",
     "country-not-in-eu": "%codiso% nie należy do żadnego kraju Unii Europejskiej",
     "create": "Crear",
-    "create-accounting-entry": "Crear Asiento Contable",
+    "create-accounting-entry": "Utwórz wpis księgowy",
     "create-delivery-note": "Crear albarán",
     "create-estimation": "Utwórz szacunek",
     "create-invoice": "Utwórz fakturę",
@@ -349,7 +349,7 @@
     "customer-banking-accounts": "Cuentas bancarias",
     "customer-code": "Cód. Cliente",
     "customer-commission-info": "Sólo se aplicará cuando la venta sea al cliente seleccionado",
-    "customer-delivery-note": "Albarán de Cliente",
+    "customer-delivery-note": "Dowód dostawy",
     "customer-delivery-notes": "Notatki dostawy klienta",
     "customer-estimation": "Presupuesto de Cliente",
     "customer-estimations": "Szacowania dla klientów",
@@ -360,7 +360,7 @@
     "customer-invoices": "Faktury klientów",
     "customer-not-found": "Cliente no encontrado",
     "customer-order": "Zamówienie klienta",
-    "customer-orders": "Pedidos de clientes",
+    "customer-orders": "Zamówienia klientów",
     "customer-payment-concept": "Pobranie za rachunek %document%",
     "customer-reached-maximum-risk": "Klient osiągnął maksymalne ryzyko",
     "customer-subaccount-p": "Indique una subcuenta a usar o deje el campo en blanco para asignar una automáticamente",
@@ -407,7 +407,7 @@
     "default-retention": "Domyślne zatrzymanie",
     "default-role": "Grupo de usuario pred.",
     "default-tax": "Impuesto predeterminado",
-    "default-to-company-email": "Por defecto al email de la empresa",
+    "default-to-company-email": "Domyślnie na e-mail firmy",
     "default-to-user-email": "Por defecto al email del usuario",
     "default-warehouse": "Domyślny magazyn",
     "delete": "Eliminar",
@@ -431,7 +431,7 @@
     "desc-alfa-code-2": "Identificación oficial para los nombres de países y otras dependencias administrativas",
     "desc-alfa-code-3": "Identificación oficial para los nombres de países y otras dependencias administrativas",
     "desc-business-name": "Nombre oficial del cliente, para las facturas y otros documentos.",
-    "desc-business-name-2": "Nombre fiscal o legalmente registrado del cliente",
+    "desc-business-name-2": "Nazwa fiskalna lub prawnie zarejestrowana klienta",
     "desc-customer-name": "Nombre por el cual el cliente es conocido. Para uso interno.",
     "desc-parent-family": "Wskaż, czy rodzina jest zgrupowana na wyższym poziomie.",
     "desc-payment-days": "Ejemplo: 1,15,31",
@@ -457,7 +457,7 @@
     "different-than": "Diferente que",
     "disable": "Desactivar",
     "disable-plugins": "Wyłącz wtyczki",
-    "disabled": "Desactivado",
+    "disabled": "Wyłączone",
     "disabled-plugins": "Wyłączone wtyczki",
     "discharge-date": "Data rozładowania: %date%",
     "discount": "Descuento",
@@ -531,7 +531,7 @@
     "epigraph": "Epígrafe",
     "epigraph-group": "Grupo de Epígrafe",
     "epigraphs": "Epigrafy",
-    "epigraphs-group": "Grupo Epígrafes",
+    "epigraphs-group": "Grupa Epigrafy",
     "equivalence": "Equivalencia",
     "equivalent-account-not-found": "Nie znaleziono konta równoważnego dla %accountCode% w ćwiczeniu %exerciseCode% Czy zaimportowałeś plan kont?",
     "equivalent-subaccount-not-found": "No se ha encontrado ninguna subcuenta equivalente a %subAccountCode% para copiar.",
@@ -550,7 +550,7 @@
     "errors": "Errores",
     "es_EC": "Español (Ecuador)",
     "es-tax-exception-e1": "España: excepción por el artículo 20 de la Ley del IVA",
-    "es-tax-exception-e2": "España: excepción por el artículo 21 de la Ley del IVA",
+    "es-tax-exception-e2": "Hiszpania: wyjątek na mocy artykułu 21 ustawy o VAT",
     "es-tax-exception-e3": "España: excepción por el artículo 22 de la Ley del IVA",
     "es-tax-exception-e4": "Hiszpania: wyjątek na mocy artykułu 23 i 24 ustawy o VAT",
     "es-tax-exception-e5": "España: excepción por el artículo 25 de la Ley del IVA",
@@ -574,7 +574,7 @@
     "event": "Wydarzenie",
     "events": "Wydarzenia",
     "exceptions": "Excepciones",
-    "excess": "En exceso",
+    "excess": "Nadmiar",
     "exclude-invalid": "Excluir inválidos",
     "exclude-valid": "Wyklucz poprawne",
     "exempt": "Exento",
@@ -624,7 +624,7 @@
     "finalize": "Finalizar",
     "find-problems": "Encontrar problemas",
     "finished": "Finalizado",
-    "finished-cron": "Terminada la ejecución del cron. Tiempo consumido: %timeNeeded%",
+    "finished-cron": "Zakończono wykonywanie crona. Zużyty czas: %timeNeeded% sekund, Pamięć: %memoryUsed%",
     "first-quarter": "1. kwartał",
     "first-steps": "Primeros pasos",
     "first-trimester": "Primer trimestre",
@@ -645,7 +645,7 @@
     "for-purchase": "Do zakupu",
     "for-sale": "Se vende",
     "foresee": "Prever",
-    "format": "Formato",
+    "format": "Format",
     "formula-cost-price": "cena kosztowa + x% + y",
     "formula-sale-price": "precio - x% - y",
     "formula-to-apply": "Fórmula a aplicar",
@@ -668,8 +668,8 @@
     "generate-accounting-entry": "Generar asiento contable",
     "generate-doc-type": "Generar tipo de documento",
     "generate-invoice": "Crear factura",
-    "generate-receipts": "Generar recibos",
-    "generate-settlements": "Generar liquidaciones",
+    "generate-receipts": "Generuj paragon",
+    "generate-settlements": "Generuj rozliczenia",
     "generate-test-data": "Generar datos de prueba",
     "generate-title": "Genera el informe",
     "generated-accounting-entries": "%quantity% asientos contables generados.",
@@ -744,7 +744,7 @@
     "idem-wildcard-info": "Copiar el valor de la linea anterior",
     "image": "Imagen",
     "images": "Obrazy",
-    "images-added-correctly": "%count% imágenes añadidas correctamente",
+    "images-added-correctly": "%count% zdjęć zostało dodanych poprawnie",
     "impacted-tax-re-subaccount": "Subcuenta recargo repercutido",
     "impacted-tax-subaccount": "Subcuenta impuesto repercutido",
     "import": "Importar",
@@ -793,7 +793,7 @@
     "invoice-receipts-diff": "Istnieje różnica (%diff%) pomiędzy kwotą faktury a sumą jej paragonów.",
     "invoice-regularized-cant-change-date": "La factura se encuentra dentro de una regularización de %tax%. No se puede modificar la fecha.",
     "invoice-regularized-cant-delete": "La factura se encuentra dentro de una regularización de %tax% No se puede eliminar.",
-    "invoice-without-acc-entry": "Factura sin asiento",
+    "invoice-without-acc-entry": "Faktura bez wpisu",
     "invoiced": "Facturado",
     "invoices": "Facturas",
     "invoices-cant-generate-new-docs": "Las facturas no pueden generar nuevos documentos",
@@ -803,7 +803,7 @@
     "irpf-record-not-found": "Registro de IRPF %value%% no encontrado.",
     "irpf-subaccount-not-found": "Subcuenta de IRPF no encontrada",
     "is-admin": "Es administrador",
-    "is-creditor": "Es acreedor",
+    "is-creditor": "Jest wierzycielem",
     "is-person": "Persona física",
     "iso": "ISO",
     "issued": "Wydano",
@@ -872,7 +872,7 @@
     "level-benefit-sales": "Poziom do zobaczenia korzyści",
     "level-cost-sales": "Poziom do zobaczenia kosztów",
     "level1": "Nivel 1",
-    "level2": "Nivel 2",
+    "level2": "Poziom 2",
     "level3": "Nivel 3",
     "level4": "Nivel 4",
     "liabilities": "Pasivo",
@@ -958,7 +958,7 @@
     "minutes": "Minuty",
     "mismatched-accounting-entry": "Asiento descuadrado",
     "missing-data-epigraph-group": "Faltan datos en el grupo de epígrafes.",
-    "missing-data-subaccount": "Faltan datos en la subcuenta.",
+    "missing-data-subaccount": "Brak danych w subkoncie.",
     "missing-epigraph-data": "Faltan datos en el epígrafe.",
     "missing-file": "Falta el archivo",
     "missing-file-help": "Parece que este archivo no se encuentra en tu instalación. Quizás no lo uses, pero <em>no puedes eliminarlo<\/em>.",
@@ -1001,7 +1001,7 @@
     "net": "Neto",
     "new": "Nuevo",
     "new-acc-entry-line-p": "Wprowadzisz linię, wpisując poniżej kod podkonta lub naciskając przycisk podkonta i wybierając podkonto.",
-    "new-address": "Nueva dirección",
+    "new-address": "Nowy adres",
     "new-customer": "nuevo cliente",
     "new-customers": "Nowi klienci",
     "new-invoice-line-p": "Możesz dodać produkt, naciskając przycisk produktu lub wpisując jego referencję lub kod kreskowy w polu kodu kreskowego. Lub naciśnij przycisk linii, aby dodać linię bez produktu.",
@@ -1100,8 +1100,8 @@
     "parent": "Padre",
     "parent-account": "Konto główne",
     "parent-family-cant-be-child": "Rodzina nadrzędna nie może być taka sama jak dziecko.",
-    "parent-group": "Grupo Padre",
-    "parent-group-cant-be-the-same-group": "El Grupo Padre no puede ser el mismo grupo",
+    "parent-group": "Grupa rodzicielska",
+    "parent-group-cant-be-the-same-group": "Grupa rodzicielska nie może być tą samą grupą",
     "parent-group-loop": "El Grupo Padre %parentGroup% está causando una relación circular.",
     "partnumber": "Número de pieza",
     "passenger": "Pasażer",
@@ -1156,7 +1156,7 @@
     "plugin-need-update-but": "El plugin %plugin% todavía no tiene actualización compatible.",
     "plugin-needed": "Se requiere el plugin %pluginName%.",
     "plugin-needs-fs-version": "El plugin %pluginName% necesita FacturaScripts %minVersion% pero tiene instalado FacturaScripts %version%",
-    "plugin-not-compatible": "El Plugin %pluginName% no es compatible con FacturaScripts %version%",
+    "plugin-not-compatible": "Wtyczka %pluginName% nie jest zgodna z FacturaScripts %version%",
     "plugin-order": "Orden: %num%",
     "plugin-phpversion-error": "El plugin %pluginName% requiere PHP %php% o superior",
     "plugin-removal-disabled": "La eliminación de plugins está desactivada en este servidor",
@@ -1174,7 +1174,7 @@
     "precio": "Cena",
     "predefined-concepts": "Predefiniowane pojęcia",
     "preferences": "Preferencias",
-    "preview": "Previsualizar",
+    "preview": "Podgląd",
     "previous": "Poprzedni",
     "previous-balance": "Balance anterior",
     "previous-documents": "Documentos previos",
@@ -1190,7 +1190,7 @@
     "print-export-options": "Opciones de imprimir y exportar",
     "print-list-of-records": "Imprimir lista de registros",
     "print-price": "Imprimir precios",
-    "print-quantity": "Imprimir cantidad",
+    "print-quantity": "Drukuj ilość",
     "printed": "Impreso",
     "printing-format": "Format druku",
     "printing-formats": "Formatos de impresión",
@@ -1299,7 +1299,7 @@
     "required": "Wymagane",
     "requires-core": "Requiere FacturaScripts %version%",
     "reserved": "Reservado",
-    "reset": "Restablecer",
+    "reset": "Resetuj",
     "resource": "Recurso",
     "respond": "Responder",
     "restore": "Restaurar",
@@ -1310,7 +1310,7 @@
     "review-date": "Data przeglądu",
     "right": "Prawo",
     "risky-customer": "Cliente con riesgo",
-    "rol": "Grupo",
+    "rol": "Grupa",
     "role": "Grupa",
     "roles": "Role",
     "rules": "Reglas",
@@ -1425,9 +1425,9 @@
     "status-document": "Stan dokumentu",
     "status-name-valid-length": "Nombre del estado no válido (debe tener entre 1 y 20 carácteres).",
     "status-value-is-number": "Pole statusu musi być liczbą.",
-    "stock": "Stock",
+    "stock": "Zapas",
     "stock-transfer": "Transferencia de stock",
-    "stock-transfers": "Transferencias de stock",
+    "stock-transfers": "Przeniesienia zapasów",
     "stockmax": "Max zapasów",
     "stockmin": "Stock mín.",
     "storage-limit-almost": "Niemal osiągnięto limit przechowywania (%limit%). Pozostało %free%",
@@ -1461,7 +1461,7 @@
     "supplied-amount": "Suplidos",
     "supplied-subaccount-not-found": "Podrachunek zaopatrzony nie znaleziony",
     "supplier": "Proveedor",
-    "supplier-account-not-found": "Subcuenta de proveedor no encontrada",
+    "supplier-account-not-found": "Nie znaleziono subkonta dostawcy",
     "supplier-code": "Cód. Proveedor",
     "supplier-delivery-note": "Albarán de Proveedor",
     "supplier-delivery-notes": "Albaranes de proveedores",
@@ -1502,7 +1502,7 @@
     "tax-base": "Base Imponible",
     "tax-credit-account": "Cuenta de crédito para impuestos",
     "tax-debit-account": "Konto debetowe do podatków",
-    "tax-transport": "Impuestos del transporte",
+    "tax-transport": "Podatki od transportu",
     "taxes": "Podatki",
     "telemetry-data-to-send": "Las instalaciones registradas notifican periódicamente la versión de FacturaScripts, PHP, país, idioma y listado de plugins.",
     "telephone-prefix": "Prefiks telefoniczny",
@@ -1519,7 +1519,7 @@
     "third-trimester": "Trzeci kwartał",
     "this-last-fortnight": "Los últimos 15 días",
     "this-last-month": "Ostatnie 30 dni",
-    "this-last-week": "Los últimos 7 días",
+    "this-last-week": "Ostatnie 7 dni",
     "this-last-year": "Los últimos 365 días",
     "this-month": "Este mes",
     "this-week": "Esta semana",
@@ -1588,11 +1588,11 @@
     "update": "Actualizar",
     "update-stock": "Actualizar stock",
     "update-supplier-prices": "Aktualizacja cen dostawców",
-    "update-time": "Hora de actualización",
-    "updated-model": "Actualizado %model% (%key%) %desc%",
+    "update-time": "Czas aktualizacji",
+    "updated-model": "Zaktualizowano %model% (%key%) %desc%",
     "updater": "Aktualizacja",
     "updates-available": "Actualizaciones disponibles",
-    "updates-available-p": "Hay actualizaciones disponibles de FacturaScripts. Por favor, haz clic en el actualizador y descarga la nueva versión. Las actualizaciones corrigen fallos y añaden nuevas funciones.",
+    "updates-available-p": "Dostępne są aktualizacje FacturaScripts. Proszę kliknąć w aktualizator i pobrać nową wersję. Aktualizacje naprawiają błędy i dodają nowe funkcje.",
     "updating-attached-relations": "Aktualizowanie powiązań załączonych plików",
     "upload-file": "Subir archivo",
     "uploaded-at": "Cargado en",
@@ -1602,7 +1602,7 @@
     "user": "Usuario",
     "user-and-config": "Usuario y configuración",
     "users": "Usuarios",
-    "using-apc": "Usando cache APC",
+    "using-apc": "Używając pamięci podręcznej APC",
     "using-filecache": "Usando Filecache",
     "using-memcache": "Usando Memcache",
     "valid-for-day": "Válido para un día",
@@ -1610,7 +1610,7 @@
     "validate-iban": "Waliduj IBAN",
     "valuation-type": "Tipo de valoración",
     "value": "Wartość",
-    "value-x": "Valor X",
+    "value-x": "Wartość X",
     "value-y": "Wartość Y",
     "values": "Valores",
     "variables": "Variables",
