--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -437,7 +437,7 @@
     "desc-payment-days": "Exemplo: 1,15,31",
     "desc-provicer-business-name-2": "Descrição do nome comercial do fornecedor 2",
     "desc-provider-business-name": "Descrição nome comercial do fornecedor",
-    "desc-provider-name": "Nome do provedor de descrição",
+    "desc-provider-name": "Nome pelo qual o fornecedor é conhecido. Para uso interno.",
     "desc-rate-code": "Código para uso interno da tarifa.",
     "desc-vat-document": "Identificador do documento onde a taxa é aplicada",
     "description": "Descrição",
@@ -503,7 +503,7 @@
     "email-bcc": "Cópia oculta do email",
     "email-cc": "Email com cópia",
     "email-not-configured": "e",
-    "email-not-sent": "Not sent",
+    "email-not-sent": "Não enviado",
     "email-notification": "Notificação por email",
     "email-notification-disabled": "A notificação por email %name% está desativada",
     "email-notification-not-exists": "Notificação de email %name% não encontrada",
@@ -641,7 +641,7 @@
     "footer-text": "Texto do rodapé",
     "for-admins": "P",
     "for-all": "Para todos",
-    "for-all-exercises": "Para todos los ejercicios",
+    "for-all-exercises": "Para todos os exercícios",
     "for-purchase": "Para compra",
     "for-sale": "À venda",
     "foresee": "Prever",
@@ -654,7 +654,7 @@
     "free": "Grátis",
     "friday": "sexta-feira",
     "from": "Desde",
-    "from-accounting-entry": "from-accounting-entry",
+    "from-accounting-entry": "De lançamento",
     "from-date": "Desde",
     "from-subaccount": "de subconta",
     "full-access": "Acesso completo",
@@ -701,7 +701,7 @@
     "group-by-day-unixtime": "Agrupar por dia - unixtime",
     "group-by-month": "group-by-month",
     "group-by-month-unixtime": "group-by-month-unixtime",
-    "group-by-subaccount": "Agrupar por subcuenta",
+    "group-by-subaccount": "Agrupar por subconta",
     "group-by-week": "Agrupar por semana",
     "group-by-week-unixtime": "agrupar por semana (unixtime)",
     "group-by-year": "group-by-year",
@@ -740,7 +740,7 @@
     "iban": "IBAN",
     "icon": "ícone",
     "id": "Id.",
-    "idaccount": "Identidade. Conta",
+    "idaccount": "Id. Conta",
     "idem-wildcard-info": "Copy the value of the previous line",
     "image": "Imagem",
     "images": "Imagens",
@@ -780,7 +780,7 @@
     "invalid-iban": "i",
     "invalid-iso-code": "Código ISO ''%iso-code% inválido",
     "invalid-number": "Número não válido: %number%",
-    "invalid-request": "Petición no válida",
+    "invalid-request": "Solicitação inválida",
     "invalid-user-can-permission": "Permissão inválida: %permission%. As permissões disponíveis são access, delete, export, import, update e only-owner-data.",
     "invalid-web": "E",
     "invoice": "Fatura",
@@ -871,7 +871,7 @@
     "level": "Nível",
     "level-benefit-sales": "Nível para ver benefícios",
     "level-cost-sales": "Nível para visualizar custos",
-    "level1": "Level 1",
+    "level1": "Nível 1",
     "level2": "Nível 2",
     "level3": "Nível 3",
     "level4": "Level 4",
@@ -900,7 +900,7 @@
     "login-password-fail": "Usuário ou senha incorretos",
     "login-text": "Digite seu nome de usuário e senha para entrar",
     "login-to-continue": "Faça login para continuar",
-    "login-to-continue-p": "Necesita identificarse para continuar con esta acción. Haga clic en iniciar sesión o cree una cuenta.",
+    "login-to-continue-p": "Necessita identificar-se para continuar com esta ação. Clique em iniciar sessão ou crie uma conta.",
     "login-user-not-found": "Usuário não encontrado",
     "logo": "logotipo",
     "logout": "Sair",
@@ -962,7 +962,7 @@
     "missing-epigraph-data": "Dados em epígrafe faltando.",
     "missing-file": "Falta o arquivo",
     "missing-file-help": "Parece que este arquivo não está presente na sua instalação. Talvez você não o utilize, mas <em>não pode removê-lo<\/em>.",
-    "mobile": "mobile",
+    "mobile": "Celular",
     "model": "Modelo",
     "model-not-found": "Modelo não encontrado: %model%",
     "monday": "segunda-feira",
@@ -1020,7 +1020,7 @@
     "no-invoice": "sem fatura",
     "no-outstanding-amount": "no-outstanding-amount",
     "no-print-permission": "Sem permissão para imprimir ou exportar",
-    "no-reference": "Sin referencia",
+    "no-reference": "Sem referência",
     "no-selected-item": "Nenhum item selecionado",
     "no-stock": "Sem estoque",
     "non-editable-accounting-entry": "Asiento contábil não editável",
@@ -1042,7 +1042,7 @@
     "notes": "Notas",
     "notice": "Aviso",
     "notices": "Avisos",
-    "notification": "Notificación",
+    "notification": "Notificação",
     "notifications": "Notificações",
     "november": "Novembro",
     "number": "Número",
@@ -1056,7 +1056,7 @@
     "october": "Octubre",
     "offsetting-account": "Offsetting account",
     "only-active": "Somente ativos",
-    "only-charged": "only-charged",
+    "only-charged": "Apenas cobrados",
     "only-closed": "Apenas fechado",
     "only-insert": "somente-inserir",
     "only-owner-data": "Mostrar apenas os registos do usuário",
@@ -1071,7 +1071,7 @@
     "operation": "Operação",
     "operator": "Operador",
     "option": "Opção",
-    "optional": "optional",
+    "optional": "opcional",
     "options": "Opções",
     "options-button-header": "Maquetación y permisos",
     "order": "Ordem",
@@ -1185,7 +1185,7 @@
     "price-with-tax": "preço-com-imposto",
     "principal": "a Principal",
     "print": "Imprimir",
-    "print-bank-data": "Imprimir cuenta bancaria",
+    "print-bank-data": "Imprimir dados bancários",
     "print-data-records": "Imprimir todos os registros",
     "print-export-options": "Opções de impressão e exportação",
     "print-list-of-records": "Imprimir lista de registros",
@@ -1196,7 +1196,7 @@
     "printing-formats": "printing-formats",
     "priority": "Prioridade",
     "private": "Privado",
-    "private-key": "Clave privada",
+    "private-key": "Chave privada",
     "process": "Processo",
     "processing": "A processar",
     "product": "produtos",
@@ -1264,7 +1264,7 @@
     "register": "Registrar",
     "register-install-ad": "Registra a instalação do FacturaScripts",
     "register-install-ad-p": "Si registras la instalación de FacturaScripts obtendrás 1 mes de patrocinio PRO, que te permite descargar uno de nuestros plugins exclusivos. Además nos ayuda obtener estadísticas de versiones del core y de PHP.",
-    "register-installation": "register-installation",
+    "register-installation": "Registrar instalação",
     "register-installation-p": "Registe a sua instalação para poder atualizar plugins pagos ou privados.",
     "register-symbol": "#",
     "registered-installation": "r",
@@ -1348,7 +1348,7 @@
     "send-location": "Enviar localização",
     "send-mail": "Enviar email",
     "send-mail-error": "send-mail-error",
-    "send-mail-ok": "send-mail-ok",
+    "send-mail-ok": "Email enviado corretamente",
     "send-videos": "Enviar vídeos",
     "sent-a-audio": "Enviou um áudio",
     "sent-a-document": "Enviou um documento",
@@ -1413,7 +1413,7 @@
     "special-accounts": "special-accounts",
     "specials-actions": "Specials Actions",
     "spreadsheet-xls": "Arquivo XLS",
-    "standard": "standard",
+    "standard": "Padrão",
     "start": "Inicio",
     "start-date": "Data de início",
     "start-hour": "Hora de início",
@@ -1429,7 +1429,7 @@
     "stock-transfer": "stock transfer",
     "stock-transfers": "stock transfers",
     "stockmax": "Estoque máximo",
-    "stockmin": "Stock min.",
+    "stockmin": "Estoque mín.",
     "storage-limit-almost": "Limite de armazenamento quase atingido (%limit%). Restam %free%",
     "storage-limit-reached": "s",
     "stripe": "Stripe",
@@ -1529,7 +1529,7 @@
     "ticket": "Bilhete",
     "tickets": "Bilhetes",
     "time": "Hora",
-    "timezone": "Selecione fuso horário",
+    "timezone": "Fuso horário",
     "title": "Título",
     "title-font-size": "Tamanho da fonte do título",
     "title-url": "Título (URL)",
@@ -1544,7 +1544,7 @@
     "total-sales": "Total das Vendas",
     "total-value-error": "Valor total de %docType% %docCode% incorreto (%docTotal%). Valor correto: %calcTotal%",
     "total-with-taxes": "Total com impostos",
-    "totalirpf-value-error": "Quantidade total de IRPF de 0 1 incorreta (2). Valor correto: 3",
+    "totalirpf-value-error": "Valor total IRPF de %docType% %docCode% incorreto (%docTotalIRPF%). Valor correto: %calcTotalIRPF%",
     "totaliva-value-error": "Valor total do IVA de %docType% %docCode% incorreto (%docTotalTax%). Valor correto: %calcTotalTax%",
     "totallinea-value-error": "Erro no valor totallinea da linha IVA do imposto 0 da factura. Valor correto: 1",
     "totals": "Totais",
@@ -1614,7 +1614,7 @@
     "value-y": "value-y",
     "values": "Valores",
     "variables": "Variáveis",
-    "variant": "Variant",
+    "variant": "Variante",
     "variants": "Variantes",
     "vat": "CUBA",
     "vat-document": "Documento de IVA",
@@ -1640,7 +1640,7 @@
     "warning": "<b> Atenção <\/ b>",
     "warnings": "Avisos",
     "web": "Web",
-    "website": "Local na rede Internet",
+    "website": "Website",
     "wednesday": "quarta-feira",
     "weeks": "Semanas",
     "weight": "Peso",
