--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -447,7 +447,7 @@
     "description-4": "Descrição 4",
     "description-4ba": "Descrição 4ba",
     "description2": "description2",
-    "description3": "description3",
+    "description3": "Descrição 3",
     "design": "Design",
     "destination-warehouse": "Destination warehouse",
     "detail": "Detalhe",
@@ -503,7 +503,7 @@
     "email-bcc": "Cópia oculta do email",
     "email-cc": "Email Carbon Copy",
     "email-not-configured": "e",
-    "email-not-sent": "Not sent",
+    "email-not-sent": "Não enviado",
     "email-notification": "Notificação por email",
     "email-notification-disabled": "A notificação por email %name% está desativada",
     "email-notification-not-exists": "Notificação de email %name% não existe",
@@ -524,7 +524,7 @@
     "enable-api": "Ativar API",
     "enable-updates-beta": "Activar actualizaciones beta",
     "enabled": "ativado",
-    "enabled-plugins": "Plugins activos",
+    "enabled-plugins": "Plugins ativos",
     "encrypt": "Criptografia",
     "end-date": "Data final",
     "end-time": "end-time",
@@ -641,7 +641,7 @@
     "footer-text": "Texto do rodapé",
     "for-admins": "P",
     "for-all": "Para todos",
-    "for-all-exercises": "Para todos los ejercicios",
+    "for-all-exercises": "Para todos os exercícios",
     "for-purchase": "Para compra",
     "for-sale": "À venda",
     "foresee": "Prever",
@@ -654,9 +654,9 @@
     "free": "free",
     "friday": "sexta-feira",
     "from": "from",
-    "from-accounting-entry": "from-accounting-entry",
+    "from-accounting-entry": "De lançamento",
     "from-date": "da data",
-    "from-subaccount": "from-subaccount",
+    "from-subaccount": "De subconta",
     "full-access": "Acesso completo",
     "full-path": "Caminho completo",
     "gap-found": "Foi encontrado um espaço para o número %numero%, dia %fecha%, %codserie% e empresa %idempresa%",
@@ -701,7 +701,7 @@
     "group-by-day-unixtime": "Agrupar por dia - unixtime",
     "group-by-month": "group-by-month",
     "group-by-month-unixtime": "group-by-month-unixtime",
-    "group-by-subaccount": "Agrupar por subcuenta",
+    "group-by-subaccount": "Agrupar por subconta",
     "group-by-week": "group-by-week",
     "group-by-week-unixtime": "agrupar por semana (unixtime)",
     "group-by-year": "group-by-year",
@@ -709,7 +709,7 @@
     "group-more-docs-p": "Agrupar com mais documentos deste cliente\/fornecedor",
     "group-name": "Nome do Grupo",
     "group-or-split": "Agrupar ou dividir",
-    "group-or-split-p": "group-or-split-p",
+    "group-or-split-p": "Este assistente permite gerar um novo documento a partir das linhas de outros. Selecione as quantidades que deseja usar, a data do novo documento e pressione o botão gerar.",
     "grouping-type": "Agrupación",
     "groups": "Grupos",
     "has-attachments": "Tem anexos",
@@ -860,7 +860,7 @@
     "last-quarter": "Último trimestre",
     "last-semester": "Último semestre",
     "last-trimester": "Último trimestre",
-    "last-update": "last-update",
+    "last-update": "Última atualização",
     "last-user": "Último usuario",
     "last-week": "semana passada",
     "last-year": "Último ano",
@@ -900,7 +900,7 @@
     "login-password-fail": "Falha na autenticação",
     "login-text": "Entrar",
     "login-to-continue": "Faça login para continuar",
-    "login-to-continue-p": "Necesita identificarse para continuar con esta acción. Haga clic en iniciar sesión o cree una cuenta.",
+    "login-to-continue-p": "Necessita identificar-se para continuar com esta ação. Clique em iniciar sessão ou crie uma conta.",
     "login-user-not-found": "Usuário não encontrado",
     "logo": "logo",
     "logout": "Sair",
@@ -1032,7 +1032,7 @@
     "not-allowed-modify": "n",
     "not-enough-stock": "not-enough-stock",
     "not-passed-integrity-check": "Some files have not passed the integrity check...<br\/>You can <a class='alert-link' target='_blank' href='IntegritySystemCheck'>obter mais detalhes aqui<\/a>.",
-    "not-public": "No público",
+    "not-public": "Não público",
     "not-stored-content": "Conteúdo não armazenado",
     "not-valid-email": "%email% não é um email válido",
     "not-valid-fiscal-number": "not-valid-fiscal-number",
@@ -1177,7 +1177,7 @@
     "preview": "preview",
     "previous": "Anterior",
     "previous-balance": "Balanço anterior",
-    "previous-documents": "previous-documents",
+    "previous-documents": "Documentos anteriores",
     "previous-quarter": "Trimestre anterior",
     "previously-purchased-from-supplier": "Comprado anteriormente ao fornecedor",
     "previously-sold-to-customer": "Vendido anteriormente ao cliente",
@@ -1264,7 +1264,7 @@
     "register": "Registrar",
     "register-install-ad": "Registra la instalación de FacturaScripts",
     "register-install-ad-p": "Si registras la instalación de FacturaScripts obtendrás 1 mes de patrocinio PRO, que te permite descargar uno de nuestros plugins exclusivos. Además nos ayuda obtener estadísticas de versiones del core y de PHP.",
-    "register-installation": "register-installation",
+    "register-installation": "Registrar instalação",
     "register-installation-p": "Registe a sua instalação para poder atualizar plugins pagos ou privados.",
     "register-symbol": "#",
     "registered-installation": "r",
@@ -1289,7 +1289,7 @@
     "renumber-invoices-success": "As faturas do exercício '%exercise%' foram renumeradas com sucesso",
     "repeat-new-password": "Repita a senha",
     "repeat-password": "Repetir contraseña",
-    "reply": "Respuesta",
+    "reply": "Resposta",
     "report": "Relatório",
     "report-grouping-account": "Agrupar por contas",
     "report-non-grouping-account": "Non group by account",
@@ -1297,7 +1297,7 @@
     "reports": "Relatórios",
     "request-sent": "request-sent",
     "required": "required",
-    "requires-core": "Requiere FacturaScripts %version%",
+    "requires-core": "Requer FacturaScripts %version%",
     "reserved": "Reservado",
     "reset": "O programa de configuração foi reiniciado com êxito, pressione <a href='0#advanced'> aqui <\/a> para continuar.",
     "resource": "Recurso",
@@ -1413,7 +1413,7 @@
     "special-accounts": "special-accounts",
     "specials-actions": "Specials Actions",
     "spreadsheet-xls": "Arquivo XLS",
-    "standard": "standard",
+    "standard": "Padrão",
     "start": "Inicio",
     "start-date": "Data de início",
     "start-hour": "Hora de inicio",
@@ -1550,7 +1550,7 @@
     "totals": "Totais",
     "town": "Cidade",
     "tracking-code": "Código de envio",
-    "transfer": "transfer",
+    "transfer": "Transferência",
     "transfers": "Transferências",
     "transfers-stock": "Transfers stock",
     "translation": "Tradução",
@@ -1569,7 +1569,7 @@
     "type-success": "Tipo correto",
     "type-warning": "Type warning",
     "unbalance": "Desequilíbrio",
-    "unbalanced-entry": "Asiento descuadrado",
+    "unbalanced-entry": "Lançamento descuadrado",
     "unchecked": "Sem checar",
     "under-minimums": "under-minimums",
     "undo": "Desfazer",
@@ -1614,7 +1614,7 @@
     "value-y": "value-y",
     "values": "values",
     "variables": "Variáveis",
-    "variant": "Variant",
+    "variant": "Variante",
     "variants": "Variantes",
     "vat": "CUBA",
     "vat-document": "Documento",
@@ -1676,7 +1676,7 @@
     "you-sent-a-document": "Enviaste un documento",
     "you-sent-a-location": "Você enviou uma localização",
     "you-sent-a-picture": "Você enviou uma imagem",
-    "you-sent-a-video": "Enviaste un video",
+    "you-sent-a-video": "Enviou um vídeo",
     "you-should-change-passwd": "deveria-mudar-senha",
     "your": "your",
     "zip-code": "Código postal",
