--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -745,7 +745,7 @@
     "image": "Imatge",
     "images": "Imatges",
     "images-added-correctly": "%count% imatges afegides correctament",
-    "impacted-tax-re-subaccount": "Subcuenta recargo repercutido",
+    "impacted-tax-re-subaccount": "Subcompte recàrrec repercutit",
     "impacted-tax-subaccount": "Subconte del IVA repercutit",
     "import": "import",
     "import-accounting-plan": "Importar el pla contable",
@@ -1081,7 +1081,7 @@
     "origin": "origin",
     "origin-warehouse": "Almagasém d'orige",
     "original": "Original",
-    "original-file": "Fichero original",
+    "original-file": "Fitxer original",
     "other-data": "Senyes adicionals",
     "others-filters": "Altres filtres",
     "out-of-stock": "Sense estoc",
@@ -1262,7 +1262,7 @@
     "refund-payment-concept": "Devolució del rebut %document%",
     "refunds": "Devolucions",
     "register": "Registrar",
-    "register-install-ad": "Registra la instalación de FacturaScripts",
+    "register-install-ad": "Registra la instal·lació de FacturaScripts",
     "register-install-ad-p": "Si registras la instalación de FacturaScripts obtendrás 1 mes de patrocinio PRO, que te permite descargar uno de nuestros plugins exclusivos. Además nos ayuda obtener estadísticas de versiones del core y de PHP.",
     "register-installation": "Registrar l'instalació",
     "register-installation-p": "Registreu la vostra instalació per a poder actualitzar complements de pagament o privats",
@@ -1340,7 +1340,7 @@
     "selected-quantity": "Quant. seleccionada",
     "selector-number": "Selector",
     "send": "Enviar",
-    "send-anonymous-data": "Enviar datos anónimos",
+    "send-anonymous-data": "Enviar dades anònimes",
     "send-audios": "Envia àudios",
     "send-documents": "Enviar documents",
     "send-images": "Enviar imatges",
@@ -1354,7 +1354,7 @@
     "sent-a-document": "Envià un document",
     "sent-a-location": "Has enviat una ubicació",
     "sent-a-picture": "Envià una imatge",
-    "sent-a-video": "Envió un video",
+    "sent-a-video": "S'ha enviat un vídeo",
     "sent-message-by": "Enviat per %nick% el %date%",
     "sepa-suffix": "Sufix SEPA",
     "september": "Setembre",
@@ -1387,7 +1387,7 @@
     "show-pending-remittances": "Mostrar remesas pendientes",
     "show-price": "Mostrar el preu en l'impressió",
     "show-quantity": "Mostrar la cantitat en l'impressió",
-    "show-section-new": "Mostrar sección crear",
+    "show-section-new": "Mostrar secció crear",
     "signature": "Signature",
     "simple": "Simple",
     "simplified": "Simplificada",
@@ -1399,11 +1399,11 @@
     "soap-extension-not-installed": "La extensió SOAP no està activada en PHP. Contacta amb el teu proveïdor d'allotjament per activar-la.",
     "social-security-number": "Número de la Seguritat Social",
     "sort": "Orde",
-    "sort-by-column": "Ordenar por columna",
+    "sort-by-column": "Ordenar per columna",
     "sort-by-date-asc": "Ordenar por fecha ascendente",
     "sort-by-date-desc": "Ordenar per data desc.",
     "sort-by-ref-asc": "Ordenar per referència asc.",
-    "sort-by-ref-desc": "Ordenar por referencia desc.",
+    "sort-by-ref-desc": "Ordenar per referència desc.",
     "sorted-asc": "Ordenat ascendent",
     "sorted-desc": "Ordenat descendent",
     "source": "Fuente",
